two-digit number width overflow fix

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .number-input input[type=number] {
     font-family: "Beleren Bold", sans-serif;
-    max-width: 5rem;
+    max-width: 6rem;
     padding: .5rem;
     border: solid #ddd;
     border-width: 0 2px;
